2014-03-21 Gregory L. Lee <lee218@llnl.gov>
	* : allow appending of PID to log filename
	* src/STATBenchD.C : perform argument parsing
	* src/STATBenchD.C : allow debug logs to be generated

2014-03-11 Gregory L. Lee <lee218@llnl.gov>
	* config/x_ac_mrnet.m4 : search for MRNet lib/*/include directories for *_config.h files

2014-03-10 Gregory L. Lee <lee218@llnl.gov>
	* scripts/[xdot,STATview].py : Updating from xdot version 0.4 to 0.6

2014-03-07 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : Allow setting of check node access

2014-03-06 Gregory L. Lee <lee218@llnl.gov>
	* etc/* : distribute with and install preference file templates

2014-03-05 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : unblock all signals (alleviate detach hang on Cray)

2014-02-24 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : fixed ranks filter specification for node search
	* scripts/xdot.py : fixed float to int conversion
	* src/STAT_FrontEnd.C : fixed minor topology generation bug with empty hostname
	* : fixed memory leaks identified by Inspector and SSA

2013-12-09 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT.C : print invocation time to terminal
	* src/STAT_FrontEnd.C : add invocation time to .perf file

2013-12-04 Dong H. Ahn <ahn1@llnl.gov>
	* : port to new LaunchMON in preparation for FLUX

2013-12-04 Gregory L. Lee <lee218@llnl.gov>
	* : Added prototype temporal ordering capability

2013-11-14 Gregory L. Lee <lee218@llnl.gov>
	* : added CP location policy, including new exclusive mode

2013-10-25 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed topology generation bug

2013-10-11 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAT[helper,view].py : optimized handling of edge labels

2013-10-10 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAThelper.py, src/STAT_BackEnd.C : improved handling of adding '\' escape character to '<' and '>' in node labels

2013-10-09 Gregory L. Lee <lee218@llnl.gov>