@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.59)
 AC_INIT(STAT, 2.1.0, lee218@llnl.gov, The Stack Trace Analysis Tool, http://www.paradyn.org/STAT/STAT.html)
-AC_COPYRIGHT([Copyright (c) 2007-2013, Lawrence Livermore National Security, LLC.])
+AC_COPYRIGHT([Copyright (c) 2007-2014, Lawrence Livermore National Security, LLC.])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_HEADER([config.h])
