@@ -1,5 +1,5 @@
 /*
-Copyright (c) 2007-2013, Lawrence Livermore National Security, LLC.
+Copyright (c) 2007-2014, Lawrence Livermore National Security, LLC.
 Produced at the Lawrence Livermore National Laboratory
 Written by Gregory Lee [lee218@llnl.gov], Dorian Arnold, Matthew LeGendre, Dong Ahn, Bronis de Supinski, Barton Miller, and Martin Schulz.
 LLNL-CODE-624152.
@@ -53,7 +53,7 @@ class MRNetSymbolReader :public Dyninst::SymReader
         unsigned long size_;
         SymReader *symReaderHandle_;
         int refCount_;
-     
+
         MRNetSymbolReader(std::string file,
                           const char* buffer,
                           unsigned long size,
