@@ -1,3 +1,6 @@
+2014-03-24 Gregory L. Lee <lee218@llnl.gov>
+	* : code cleanup + updated copyright date
+
 2014-03-21 Gregory L. Lee <lee218@llnl.gov>
 	* : allow appending of PID to log filename
 	* src/STATBenchD.C : perform argument parsing
